<?xml version="1.0" ?>
<package format="2">
  <name>npc_simulator</name>
  <version>0.1.0</version>
  <description>The npc_simulator package</description>

  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>uuid_msgs</depend>
  <depend>unique_id</depend>
  <depend>lanelet2_extension</depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>dummy_perception_publisher</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
