<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>npc_simulator</name>
  <version>0.1.0</version>
  <description>The npc_simulator package</description>

  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>uuid_msgs</depend>
  <depend>unique_id</depend>
  <depend>lanelet2_extension</depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>dummy_perception_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
