<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_api_simulator</name>
  <version>0.0.0</version>
  <description>The scenario_api_simulator package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>dummy_perception_publisher</build_depend>
  <build_depend>lanelet2_extension</build_depend>
  <build_depend>scenario_api_utils</build_depend>
  <build_depend>tf2</build_depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>npc_simulator</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
