<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_api_simulator</name>
  <version>0.0.0</version>
  <description>The scenario_api_simulator package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autoware_lanelet2_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <build_depend>dummy_perception_publisher</build_depend>
  <depend>geometry_msgs</depend>
  <build_depend>lanelet2_extension</build_depend>
  <depend>npc_simulator</depend>
  <depend>rclcpp</depend>
  <build_depend>scenario_api_utils</build_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>tf2</build_depend>
  <depend>unique_identifier_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
