<?xml version="1.0" ?>
<package format="2">
  <name>npc_simulator_rviz_plugin</name>
  <version>0.1.0</version>
  <description>The npc_simulator_rviz_plugin package</description>

  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>npc_simulator</depend>
  <depend>autoware_perception_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml" />
  </export>
</package>
